tests/paczka1/fuzzy1/43282373.err
Error in line 1: LSJVowRJWk A827 65,9
Error in line 3: 3oEYhD A675 50,2
Error in line 12: RVzP A89 69,9
Error in line 10: Wa4t A675 90,6
Error in line 21: LSJVowRJWk A675 257,81
Error in line 22: 3oEYhD AZ27 3Z,0
Error in line 23: FnFmaestJOA A827 713,9
Error in line 24: FnFmaestJOA A675 11,6
Error in line 18: Wa4t A827 63,5
Error in line 36: RVzP S659 96,2
